# clickweave

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  checksums.txt  impl_trait_test
crates/clickweave-core/: Cargo.toml
crates/clickweave-core/src/: app_detection.rs  app_kind.rs  auto_id.rs  cdp.rs  chat_trace.rs  chrome_profiles.rs  decision_cache.rs  lib.rs  node_params.rs  output_schema.rs  patch_merge.rs  permissions.rs  project.rs  runtime.rs  safety.rs  sanitize.rs  skill_run.rs  storage.rs  tool_mapping.rs  validation.rs  variant_index.rs  walkthrough.rs  workflow.rs
crates/clickweave-core/src/node_params/: desktop.rs  mod.rs  targets.rs  tests.rs  trace.rs
crates/clickweave-core/src/storage/: fs.rs  mod.rs  retention.rs  run_storage.rs  tests.rs
crates/clickweave-core/src/tool_mapping/: ax.rs  cdp.rs  desktop.rs  mod.rs  node_to_tool.rs  tests.rs
crates/clickweave-core/src/validation/: cdp_scope.rs  cycles.rs  edges.rs  loops.rs  mod.rs  test_helpers.rs  variables.rs
crates/clickweave-core/src/walkthrough/: enrichment.rs  event_coalescing.rs  event_interpretation.rs  mod.rs  session.rs  storage.rs  synthesis.rs  target_resolution.rs  test_helpers.rs  types.rs
crates/clickweave-core/src/walkthrough/cdp_scripts/: check_and_reinject.js  click_listener.js  common.js  hover_listener.js  retrieve_click.js  retrieve_hovers.js  stop_hover.js
crates/clickweave-core/src/walkthrough/synthesis/: draft.rs  mod.rs  normalize.rs  tests.rs
crates/clickweave-engine/: Cargo.toml
crates/clickweave-engine/prompts/: agent_system.md
crates/clickweave-engine/src/: cdp_lifecycle.rs  lib.rs
crates/clickweave-engine/src/agent/: approval.rs  cache.rs  completion_check.rs  context.rs  loop_runner.rs  mod.rs  permissions.rs  phase.rs  prior_turns.rs  prompt.rs  recovery.rs  render.rs  runner.rs  step_record.rs  task_state.rs  test_stubs.rs  time_oracle.rs  trace_graph.rs  transition.rs  types.rs  world_model.rs
crates/clickweave-engine/src/agent/episodic/: embedder.rs  end_to_end_tests.rs  mod.rs  promotion.rs  render.rs  retrieval.rs  signature.rs  store.rs  types.rs  write.rs
crates/clickweave-engine/src/agent/runner/: approval.rs  cdp_lifecycle.rs  focus.rs  loop_control.rs  mod.rs  progress.rs  records.rs  tests.rs  tool_classification.rs  turn.rs  turn_runtime.rs
crates/clickweave-engine/src/agent/skills/: emitter.rs  extractor.rs  frontmatter.rs  index.rs  loop_folding.rs  mod.rs  parser.rs  patch.rs  prose_generator.rs  provenance.rs  render.rs  replay.rs  retrieval.rs  section_history.rs  signature.rs  store.rs  types.rs  walkthrough.rs  watcher.rs  watcher_consumer.rs
crates/clickweave-engine/src/agent/tests/: basic_run_tests.rs  cdp_lifecycle_parity.rs  completion_verification_tests.rs  conversational_extend.rs  coordination.rs  mod.rs  permission_guard_tests.rs  runner_integration_tests.rs  stub.rs  tool_surface_tests.rs  transcript_tests.rs
crates/clickweave-engine/src/agent/tool_mapping/: ax.rs  cdp.rs  desktop.rs  mod.rs  node_to_tool.rs  tests.rs
crates/clickweave-engine/src/executor/: action_verification.rs  ai_step.rs  ambiguity.rs  app_resolve.rs  best_effort.rs  cdp_helpers.rs  cdp_wait.rs  control_flow.rs  deterministic.rs  element_resolve.rs  error.rs  find_app.rs  graph_nav.rs  mod.rs  outcome_verification.rs  output_ref.rs  prompts.rs  retry_context.rs  run_loop.rs  screenshot.rs  skill_runner.rs  supervision.rs  tests.rs  trace.rs  variables.rs  verdict.rs
crates/clickweave-engine/src/executor/deterministic/: app_debug.rs  (+15 more)
crates/clickweave-engine/tests/: correction_paths.rs  destructive_tool_gating.rs  episodic_end_to_end.rs  episodic_store.rs  external_conflict_and_journal_recovery.rs  safety_skill_scope.rs  skill_loop_round_trip.rs  skill_run_privacy_off.rs  skill_run_round_trip.rs  skills_extractor.rs  skills_phase3_e2e.rs  skills_store.rs
crates/clickweave-llm/: Cargo.toml
crates/clickweave-llm/eval/: eval.toml  eval.toml.example  tools.json
crates/clickweave-llm/eval/cases/: app-switch.toml  calc-basic.toml  calc-loop.toml  cdp-chrome-navigate.toml  cdp-chrome-tabs.toml  cdp-electron-message.toml  cdp-multi-turn-extend.toml  cdp-wait-loop.toml  conditional-branch.toml  conditional-check.toml  find-and-click.toml  keyboard-shortcuts.toml  loop-with-check.toml  message-send.toml  mixed-cdp-native.toml  multi-app.toml  multi-turn-extend.toml  multi-turn-redirect.toml  native-desktop-strict.toml  notes-create.toml  redirect-chat-message.toml  redirect-folder-save.toml  screenshot-only.toml  smoke-test.toml  verify-result.toml
crates/clickweave-llm/eval/snapshots/: discord-friends.txt  signal-chat-list.txt  signal-conversation.txt
crates/clickweave-llm/prompts/: planner.md  walkthrough.md
crates/clickweave-llm/src/: client.rs  dyn_backend.rs  image_prep.rs  lib.rs  types.rs
crates/clickweave-llm/src/client/: backend.rs  config.rs  endpoint.rs  http.rs  mod.rs  model_info.rs  prompts.rs  tests.rs  vision.rs
crates/clickweave-llm/src/planner/: assistant.rs  builder.rs  conversation.rs  conversation_loop.rs  mod.rs  parse.rs  patch.rs  plan.rs  prompt.rs  repair.rs  resolution.rs  tests.rs  tool_use.rs  types.rs  walkthrough.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  recording-bar.json
src-tauri/src/: main.rs  mcp_resolve.rs  privacy.rs
src-tauri/src/commands/: agent.rs  agent_chat.rs  assistant.rs  chrome_profiles.rs  error.rs  executor.rs  mod.rs  planner.rs  planner_session.rs  pre_gather.rs  project.rs  resolution_listener.rs  run_trace.rs  runs.rs  skills.rs  types.rs  walkthrough.rs  walkthrough_enrichment.rs  walkthrough_session.rs
src-tauri/src/commands/agent/: commands.rs  disagreement.rs  events.rs  forwarder.rs  mod.rs  setup.rs  skill_proposal.rs  smoke_tests.rs  task.rs  tests.rs
src-tauri/src/commands/walkthrough_session/: capture.rs  cdp_click.rs  cdp_setup.rs  click_enrichment.rs  emit.rs  handle.rs  hover.rs  mod.rs  platform.rs  tests.rs
src-tauri/src/llm/: skill_proposal.rs
src-tauri/src/platform/: macos.rs  mod.rs  windows.rs
(+296 files in other folders)
