[workspace]
resolver = "2"
members = [
    "crates/clickweave-core",
    "crates/clickweave-engine",
    "crates/clickweave-llm",
    "crates/clickweave-mcp",
    "src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
# Shared dependencies
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Internal crates
clickweave-core = { path = "crates/clickweave-core" }
clickweave-engine = { path = "crates/clickweave-engine" }
clickweave-llm = { path = "crates/clickweave-llm" }
clickweave-mcp = { path = "crates/clickweave-mcp" }
