[package]
name = "clickweave-tauri"
version.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "specta"] }
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-specta = { version = "2.0.0-rc", features = ["derive", "typescript"] }
specta = { version = "2.0.0-rc", features = ["derive"] }
specta-typescript = "0.0.9"
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
anyhow.workspace = true
base64.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true

image.workspace = true
regex = "1"
clickweave-core = { workspace = true, features = ["specta"] }
clickweave-engine.workspace = true
clickweave-llm = { workspace = true, features = ["specta"] }
clickweave-mcp.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"
foreign-types = "0.5"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
] }
