[package]
name = "clickweave-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
specta = { version = "2.0.0-rc", features = ["derive", "uuid", "serde_json"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
plist = "1.8"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Threading"] }

[features]
default = []
specta = ["dep:specta"]
