[package]
name = "clickweave-engine"
version.workspace = true
edition.workspace = true

[dependencies]
clickweave-core.workspace = true
clickweave-llm.workspace = true
clickweave-mcp.workspace = true

anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
specta = { version = "2.0.0-rc", features = ["derive", "uuid", "serde_json", "chrono"], optional = true }
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
# `tokio::time::pause` lets cdp_lifecycle tests skip the real retry sleeps.
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"

[features]
default = []
specta = ["dep:specta"]
