[package]
name = "clickweave-engine"
version.workspace = true
edition.workspace = true

[dependencies]
clickweave-core.workspace = true
clickweave-llm.workspace = true
clickweave-mcp.workspace = true

anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
specta = { version = "2.0.0-rc", features = ["derive", "uuid", "serde_json", "chrono"], optional = true }
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true

# Episodic memory layer (Spec 2). `bundled` ships SQLite as part of the
# build so consumers do not need a system libsqlite3. Actual SQLite use
# lands in Phase 2; declared here so Phase 1 modules can reference the
# error type from `EpisodicError`.
rusqlite = { version = "0.31", features = ["bundled"] }
blake3 = "1.5"
bincode = "1.3"
ulid = "1.1"
url = "2.5"

[dev-dependencies]
# `tokio::time::pause` lets cdp_lifecycle tests skip the real retry sleeps.
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"

[features]
default = []
specta = ["dep:specta"]
# Expose the agent test doubles (`ScriptedLlm`, `StaticMcp`, `NullMcp`,
# `YesVlm`, `NoVlm`, response builders) to downstream `[dev-dependencies]`
# via `clickweave_engine::agent::test_stubs`. Opt-in only — production
# builds of the engine never compile this surface.
test-stubs = []
