[package]
name = "clickweave-llm"
version.workspace = true
edition.workspace = true

[dependencies]
clickweave-core = { path = "../clickweave-core" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
reqwest = { version = "0.12", features = ["json"] }
tracing.workspace = true
uuid.workspace = true
specta = { version = "2.0.0-rc", features = ["derive"], optional = true }
toml_edit = { version = "0.22", features = ["serde"], optional = true }
clap = { version = "4", features = ["derive"], optional = true }
sha2 = { version = "0.10", optional = true }
chrono = { workspace = true, optional = true }
image.workspace = true
base64.workspace = true

[features]
default = []
specta = ["dep:specta", "clickweave-core/specta"]
eval = ["dep:toml_edit", "dep:clap", "dep:sha2", "dep:chrono"]

[[bin]]
name = "planner_eval"
path = "src/bin/planner_eval.rs"
required-features = ["eval"]
