[package]
name = "clickweave-llm"
version.workspace = true
edition.workspace = true

[dependencies]
clickweave-core = { path = "../clickweave-core" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
reqwest = { version = "0.12", features = ["json"] }
tracing.workspace = true
uuid.workspace = true
specta = { version = "2.0.0-rc", features = ["derive"], optional = true }
image.workspace = true
base64.workspace = true

[features]
default = []
specta = ["dep:specta", "clickweave-core/specta"]

